# Stock-Predictor

./: CMakeLists.txt  README.md
data/: sample_data.csv
include/: predictor.h
src/: data_loader.cpp  main.cpp  predictor.cpp
